Adding gradle and travis config
Expecting travis to execute both tests and show 2 failing tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: java
 jdk: oraclejdk8
 script:
-# - gradle -p RomanNumerals check
-# - gradle -p TextMunger check
-- gradle -p roman-numerals-2 check
+- gradle check
