--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: java
 jdk: oraclejdk8
-before_install:
-- chmod +x gradlew
+install: gradle wrapper --gradle-version 4.2
 script:
 - gradle check
