--- a/collector/build.gradle
+++ b/collector/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
     compile 'junit:junit:4.12'
+    compile 'com.nanohttpd:nanohttpd-webserver:2.1.1'
 }
 group 'ethos'
 version '1.0-SNAPSHOT'
