--- a/collector/build.gradle
+++ b/collector/build.gradle
@@ -19,9 +19,11 @@ repositories {
 
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
     compile 'junit:junit:4.12'
-    compile 'com.nanohttpd:nanohttpd-webserver:2.1.1'
+    //compile 'com.nanohttpd:nanohttpd-webserver:2.1.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 group 'ethos'
 version '1.0-SNAPSHOT'
